# fast_micro_shop

./: .gitignore  README.md  crud_del.py  items_views.py  main.py  pyproject.toml  requirements.txt  shop_db.sqlite3
alembic/: env.py
alembic/versions/: 2166aac8f00b_creare_all.py  4deac0a0f0b7_create_profile_table.py  5a6f83eb07e3_create_orders_table.py  6b30c17dddc5_first_commit_create_table_products.py  84ec963825b1_try_to_separate_sec_and_ass.py  907d71578ea4_add_foreingkey.py  98a86dad6e8f_fix_posts_in_post.py  a72056a4f48f_order_product_ass.py  e8667899cbf0_add_count_in_orderproductass.py  f5f7e90c9b0b_current_price_add.py
api_v1/: __init__.py
api_v1/auth/: crud.py  helpers.py  jwt_auth.py  utils.py  validation.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
certs/: jwt-private.pem  jwt-public.pem
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_ass.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
